--- a/MySite/src/app/globals.css
+++ b/MySite/src/app/globals.css
@@ -26,5 +26,12 @@ html {
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
+}
+
+/* Prevent copying with selection on all text elements */
+* {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
